# cwmcp

./: CLAUDE.md  README.md  config.example.properties  pyproject.toml  setup.sh
docs/superpowers/plans/: 2026-03-30-cwmcp-implementation.md
docs/superpowers/specs/: 2026-03-30-cwmcp-design.md
src/cwmcp/: config.py  server.py
src/cwmcp/lib/: audio_generator.py  batch_uploader.py  cwbe_client.py  translations_auto.py  translations_helper.py  uploader.py
src/cwmcp/tools/: align_text.py  build_translations.py  chapter_status.py  chapters.py  check_coverage.py  create_chapter.py  download_chapters.py  generate_audio.py  list_books.py  publications.py  query_logs.py  sanity.py  upload.py  upload_chapter_from_zip.py
tests/: test_chapter_status.py  test_config.py  test_coverage.py  test_list_books.py  test_sanity.py  test_translations_helper.py
